--- a/package.json
+++ b/package.json
@@ -13,21 +13,21 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
-    "braces": "^1.8.5",
-    "glob-parent": "^2.0.0",
+    "braces": "^3.0.2",
+    "glob-parent": "^6.0.1",
     "js-yaml": "^3.14.1",
-    "mem": "^1.1.0",
-    "merge": "^1.2.1",
+    "mem": "^9.0.1",
+    "merge": "^2.1.1",
     "normalize-url": "^1.9.1",
+    "npm": "^6.14.11",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^1.1.5",
-    "trim-newlines": "^1.0.0",
+    "react-scripts": "^4.0.3",
+    "trim-newlines": "^4.0.2",
     "web-vitals": "^0.2.4",
-    "webpack-dev-server": "^2.11.3",
-    "yargs-parser": "^5.0.1"
+    "yargs-parser": "^20.2.9"
   },
   "scripts": {
     "build": "react-scripts build",
